# cyguide

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS
cyguide/: app.py  main.py
cyguide/engine/: adapter.py  canonicalize.py  executor.py  explainer.py  gateway.py  manifest.py  power_facade.py  registry.py  store.py
cyguide/modes/: learning.py  power.py
cyguide/schemas/: base.py  credential.py  dns.py  entity.py  host_internal.py  netblock.py  network.py  power.py  tls.py  vulnerability.py  web.py
cyguide/ui/: style.css
cyguide/ui/screens/: home.py  learning.py  power.py  tool_browser.py
cyguide/ui/widgets/: home.py  power.py
docs/: ARCHITECTURE.md  CONTEXT.md  CONTRIBUTING.md  CONTRIBUTORS.md  POWER_MODE.md  POWER_MODE_DECISIONS.md  POWER_MODE_PROGRESS.md  SCHEMA_REGISTRY.md  TODO.md
docs/efd/: 01_data_and_schemas.md  02_plugins_and_tools.md  03_session_and_history.md  04_streaming_and_ui_architecture.md  README.md
docs/efd/roadblock/: 01_ui_freeze_and_streaming.md
scripts/: generate_schema_registry.py  test_enrichment.py  test_runner.py  verify.sh
tests/fixtures/: mock_tools.py
tests/integration/: test_executor_flow.py  test_full_system_flow.py
tests/unit/: test_app.py  test_canonicalize.py  test_engine_executor.py  test_engine_explainer.py  test_engine_registry.py  test_engine_store.py  test_modes.py  test_ollama_backend.py  test_power_facade.py  test_power_schemas.py  test_schemas.py
tools/nmap/: adapter.py  manifest.toml
tools/whois/: adapter.py  manifest.toml
