[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyguide"
version = "0.1.0"
authors = [
  { name="Harshwardhan Patil" },
  { name="CyGuide Contributors" },
]
description = "A TUI-based guided cybersecurity learning platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Intended Audience :: Education",
]
dependencies = [
    "textual>=1.0.0",
    "pydantic>=2.0.0",
    "aiosqlite>=0.20.0",
    "pyperclip>=1.9.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["cyguide*"]

[project.scripts]
cyg = "cyguide.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
norecursedirs = ["scripts", "venv", ".git", "__pycache__"]
